--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.14",
     "heroicons-react": "^1.4.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
