cart and details page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "heroicons"
+        "headlessui",
+        "heroicons",
+        "Nandini",
+        "Shyam"
     ]
 }
