bug fix profile page

--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "react-ecommerece",
+  "name": "react-ecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
-    "@heroicons/vue": "^2.0.18",
-    "@iconify/icons-heroicons-solid": "^1.2.6",
-    "@react-icons/all-files": "^4.1.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "autoprefixer": "^10.4.14",
-    "heroicons-react": "^1.4.1",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.1",
-    "react-redux": "^8.1.0",
-    "react-router-dom": "^6.13.0",
+    "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "sort-by": "^1.2.0",
+    "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.2"
   }
 }
